--- a/pom.xml
+++ b/pom.xml
@@ -11,19 +11,6 @@
     <name>intro-junit5</name>
     <description>Introduction to JUnit 5</description>
 
-    <organization>
-        <name>Spring Framework Guru</name>
-        <url>https://springframework.guru/</url>
-    </organization>
-
-    <developers>
-        <developer>
-            <id>jt</id>
-            <name>John Thompson</name>
-            <email>john@springframework.guru</email>
-        </developer>
-    </developers>
-
     <inceptionYear>2018</inceptionYear>
 
     <licenses>
@@ -39,5 +26,40 @@
         <java.version>11</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <junit-platform.version>5.6.2</junit-platform.version>
     </properties>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit-platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+
+    </dependencies>
 </project>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
